--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,13 +2,13 @@
 <ul class="flex items-center text-sm font-medium h-full">
     {% if user.is_authenticated %}
         <!-- <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a href="{{User.get_absolute_url}}">내정보</a></li> -->
-        <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
+        <li class="nav_link"><a href="{{user.get_absolute_url}}">프로필</a></li>
 
-        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a href="{% url "users:logout" %}">Log Out</a></li>
+        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a href="{% url "users:logout" %}">로그아웃</a></li>
     
     {% else %}
-        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:login" %}">Log In</a></li>
-        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:signup" %}">Sign Up</a></li>
+        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:login" %}">로그인</a></li>
+        <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:signup" %}">회원가입</a></li>
     {% endif %}
     
 </ul>
