--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -13,11 +13,11 @@
 
 
 
-            {% include 'mixins/auth/auth_form.html' with form=form cta="Log in" %}
+            {% include 'mixins/auth/auth_form.html' with form=form cta="로그인" %}
 
             <div class="mt-5">
-                <span class="mr-2">Don't have an account?</span>
-                <a href="{% url 'users:signup' %}" class="text-green-500 font-medium">Sign up</a>
+                <span class="mr-2">회원이 아니신가요?</span>
+                <a href="{% url 'users:signup' %}" class="text-green-500 font-medium">회원가입</a>
             </div>
     </div>
 {% endblock content %}
