--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,15 +1,16 @@
 
 <ul class="flex items-center text-sm font-medium h-full">
+    {% if user.is_superuser %}
+        <li class="nav_link"><a href="{% url "key:key_list" %}">키워드 인코딩</a></li>
+    {% endif %}
     {% if user.is_authenticated %}
         <!-- <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a href="{{User.get_absolute_url}}">내정보</a></li> -->
         <li class="nav_link"><a href="{{user.get_absolute_url}}">프로필</a></li>
-
         <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a href="{% url "users:logout" %}">로그아웃</a></li>
-    
     {% else %}
         <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:login" %}">로그인</a></li>
         <li class="nav_link m-8 border-b-2 border-white h-full flex items-center hover:border-gray-600"><a class="py-10 px-5" href="{% url "users:signup" %}">회원가입</a></li>
     {% endif %}
-    
+
 </ul>
 
