인코딩 페이지 추가 1

--- a/templates/key_change/key_list.html
+++ b/templates/key_change/key_list.html
@@ -41,7 +41,7 @@
                     슬롯 종료일
                 </th>
                 <th scope="col" class="py-3 px-6">
-                    바로가기
+                    키워드변환 확인
                 </th>
             </tr>
         </thead>
@@ -78,7 +78,7 @@
                 </td>
                 <td class="py-4 px-6">
 
-                <a href="{% url "key:key_encoding" s.pk %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">이동</a>
+                <a href="{% url "key:key_encoding" s.pk %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">확인</a>
                 </td>
             </tr>
 
