--- a/templates/key_change/key_detail.html
+++ b/templates/key_change/key_detail.html
@@ -9,7 +9,8 @@
     <div class="container w-10/12 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
     {% for enc in enc_keys %}
         <div class="mx-auto item-left py-3">
-            <p>{{ enc }}</p>
+            <p>{{ enc.key }}</p>
+        <p>{{ enc.key_url }}</p>
         </div>
     {% endfor %}
     </div>
