--- a/templates/key_change/key_detail.html
+++ b/templates/key_change/key_detail.html
@@ -6,6 +6,7 @@
 
 
 {% block content %}
+    {% if user.is_superuser %}
     <div class="container w-10/12 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
     {% for enc in enc_keys %}
         <div class="mx-auto item-left py-3">
@@ -14,6 +15,7 @@
         </div>
     {% endfor %}
     </div>
+    {% endif %}
 
 {% endblock content %}
 
