app_code 링크 버튼 추가

--- a/templates/key_change/key_detail.html
+++ b/templates/key_change/key_detail.html
@@ -14,8 +14,11 @@
         <p>{{ enc.key_url }}</p>
         </div>
     {% endfor %}
-    </div>
+
     {% endif %}
 
+    <button class="btn btn-link bg-red-500 items-center w-3/5 text-white  " onclick="window.open('http://www.monstercash.co.kr/_adm/fpurchase.form.siso?CODE={{ slots.app_code }} ')">APP 바로가기</button>
+
+     </div>
 {% endblock content %}
 
