--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,14 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>{% block page_title %}{% endblock page_title %}| Plss</title>
   </head>
-  <body class="text-gray-800 mt-24 font-light">
+  <body class="text-black mt-24 font-light ">
 
-    <header class="container max-w-full inset-0 flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed">
-      <div class="flex items-center w-1/3">
-        <a href="{% url "core:home" %}" class="mr-6">
+    <header class="bg-gray-800 container max-w-full inset-0 flex items-center px-6 h-20 border-b border-blue-400 fixed justify-around ">
+      <div class="flex items-center w-1/7">
+        <a href="{% url "core:home" %}" class="mr-6 text-white">
             <!-- <img class="w-8" src="{% static 'img/logo.png' %}" /> -->
             <i class="fa-solid fa-audio-description text-5xl  ml-10"></i>
         </a>
-        
-
       </div>
       {% include "partials/nav.html" %}
     </header>
