--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/72b499a714.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -14,7 +15,8 @@
   </head>
   <body class="text-black mt-24 font-light ">
 
-    <header class="bg-gray-800 container max-w-full inset-0 flex items-center px-6 h-20 border-b border-blue-400 fixed justify-around ">
+
+    <header class="bg-gray-800 container max-w-full inset-0 flex items-center px-6 h-20 border-b border-blue-400 fixed justify-around">
       <div class="flex items-center w-1/7">
         <a href="{% url "core:home" %}" class="mr-6 text-white">
             <!-- <img class="w-8" src="{% static 'img/logo.png' %}" /> -->
@@ -22,7 +24,9 @@
         </a>
       </div>
       {% include "partials/nav.html" %}
+
     </header>
+
 
     {% block content %}{% endblock %}
     {% include "partials/footer.html" %}
