add site_trafic app

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,9 +1,10 @@
 
 <ul class="flex items-center text-sm font-medium h-full active:bg-white ">
-    <li class="text-gray-300 target:shadow-lg hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "slot:slot_list" %}">실소비자 유입</a></li>
+    <li class="text-gray-300 target:shadow-lg hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "slot:slot_list" %}">쇼핑 실소비자 유입</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "place:click" %}">플레이스 실소비자 유입</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "place:save" %}">플레이스 저장하기</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "place:keep" %}">플레이스 KEEP</a></li>
+    <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="py-10 px-5" href="{% url "site:web_click" %}">웹사이트 실소비자 유입</a></li>
 
 </ul>
 <ul class="flex items-center text-sm font-medium h-full ">
