--- a/templates/place/placeclick_list.html
+++ b/templates/place/placeclick_list.html
@@ -8,7 +8,8 @@
 {% block content %}
 
 
-    <div class="container mx-auto  pt-7">
+    <div class="container mx-auto  pt-1">
+    <li class="btn bg-blue-500 text-white w-1/6 mb-3"><a class="py-10 px-5" href="{% url "place:click_create" %}">슬롯 추가 신청</a></li>
 
 
 <div class="overflow-x-auto shadow-md sm:rounded-lg">
