--- a/templates/place/placesave_list.html
+++ b/templates/place/placesave_list.html
@@ -25,7 +25,7 @@
                     슬롯 기간
                 </th>
                 <th scope="col" class="py-3 px-6">
-                    키워드
+                    URL
                 </th>
                 <th scope="col" class="py-3 px-6">
                     슬롯 시작일
@@ -56,7 +56,7 @@
                     {{s.day_count}}
                 </td>
                 <td class="py-4 px-6">
-                    {{s.serch_key}}
+                    {{s.product_url}}
                 </td>
                 <td class="py-4 px-6">
                     {{s.slot_start_date}}
