--- a/templates/place/create-slot-click.html
+++ b/templates/place/create-slot-click.html
@@ -9,11 +9,52 @@
 
 {% block content %}
 
-    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
+<div class="grid grid-cols-7 gap-2 items-start place-content-evenly">
 
-        {% include 'mixins/auth/auth_form.html' with form=form cta="슬롯신청" %}
+    <div class="col-start-2 col-span-2 container mx-auto my-10 flex flex-col items-center border p-6 border-gray-400 mr-3">
+{#        <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400 mr-3">#}
 
-
+            {% include 'mixins/auth/auth_form.html' with form=form cta="슬롯신청" %}
     </div>
+{#        <div class="container mx-auto my-10 border border-gray-400 lg:w-4/12 p-8">#}
+            <div class="container col-span-3 p-10 mx-auto my-10 border border-gray-400 p-8">
+            <h2 class="text-2xl font-bold text-red-400"><p>방문유입 키워드 설정 방법</p>
+                <p>(검색시 30위 이내로 세팅해 주셔야 합니다)</p></h2>
+                <h3 class="text-xl py-3 font-bold">플레이스 슬롯 활용방법</h3>
+                <p class="text-lg font-medium">1. 지역명 + 메인키워드 무조건 순위가 오르는것이 아닙니다.</p>
+                <p class="mt-3">예) 부산 맛집</p>
+                <p>위 처럼 메인 키워드여야만 순위가 반영되는게 아님</p>
+                <p>4일안에 반응이 무조껀 오는 키워드 찾기</p>
+                <ul class="list-disc px-8">
+                    <li>부산 맛집</li>
+                    <li>해운대구 맛집</li>
+                    <li>해운대구 중동 맛집</li>
+                </ul>
+                <p class="mt-10 text-lg font-medium">2. 지역명 + 가게상호 세팅으로도 순위가 잘 오릅니다.</p>
+                <ul class="list-disc px-8 mt-3">
+                    <li>부산 OOO가게</li>
+                    <li>해운대구 OOO가게</li>
+                    <li>부산 중동 OOO가게</li>
+                </ul>
+                <p>위 처럼 지역명 + 가게상호로도 잘 오름</p>
+                <h3 class="mt-10 text-lg font-medium">
+                    <i class="fa-sharp fa-solid fa-star"></i>
+                    중요한 내용
+                    <i class="fa-sharp fa-solid fa-star"></i>
+                </h3>
+                <p class="mt-3">한가게에 3개 슬롯 이상 (360) 물릴 필요가 없습니다.</p>
+                <p>이 이상부터는 큰 효과 없음</p>
+                <p>현재 로직은 트래픽 + 저장 + 영수증 + 블로그 배포 입니다.</p>
+
+
+
+
+
+        </div>
+</div>
+
+
+
+
 {% endblock content %}
