--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,7 +4,7 @@
     <li class="text-gray-300 target:shadow-lg hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "slot:slot_list" %}">쇼핑 실소비자 유입</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "place:click" %}">플레이스 실소비자 유입</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "place:save" %}">플레이스 저장하기</a></li>
-    <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "place:keep" %}">플레이스 KEEP</a></li>
+    <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "auto_slot:auto_click" %}">자동완성</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "site:web_click" %}">웹사이트 실소비자 유입</a></li>
     <li class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"><a class="" href="{% url "slot_moo:slot_moo_list" %}">쇼핑 무한타</a></li>
 
